# raylib-arpg

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Actor.hpp  ActorMovementSystem.cpp  ActorMovementSystem.hpp  Animation.hpp  AnimationController.cpp  AnimationController.hpp  AnimationState.hpp  AnimationSystem.cpp  App.cpp  App.h  App.hpp  BaseSystem.hpp  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.hpp  Collideable.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  Cursor.cpp  Cursor.hpp  ECSManager.cpp  ECSManager.hpp  Editor.cpp  Editor.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  EventCallback.hpp  EventCaller.cpp  EventCaller.hpp  EventManager.cpp  (+46 more)
core/: CMakeLists.txt
core/src/: AbilityFactory.cpp  AbilityFactory.hpp  Application.cpp  Application.hpp  AudioManager.cpp  AudioManager.hpp  Camera.cpp  Camera.hpp  Cursor.cpp  Cursor.hpp  CursorClickIndicator.cpp  CursorClickIndicator.hpp  DialogFactory.cpp  DialogFactory.hpp  ECSManager.cpp  ECSManager.hpp  EntityEventBridge.hpp  EntityEventBridgeManager.hpp  EntityReflectionSignalRouter.hpp  FullscreenTextOverlayFactory.cpp  FullscreenTextOverlayFactory.hpp  FullscreenTextOverlayManager.cpp  FullscreenTextOverlayManager.hpp  Game.cpp  Game.hpp  GameData.cpp  GameData.hpp  GameManager.cpp  GameManager.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameUiElements.cpp  GameUiElements.hpp  GameUiEngine.cpp  GameUiEngine.hpp  GameUiFactory.cpp  GameUiFactory.hpp  ItemFactory.cpp  ItemFactory.hpp  KeyMapping.hpp  (+28 more)
core/src/abilities/: Abilities.cpp  Abilities.hpp  Ability.cpp  Ability.hpp  AbilityData.hpp  AbilityDefinitions.cpp  AbilityDefinitions.hpp  AbilityFactory.cpp  AbilityFunctions.cpp  AbilityFunctions.hpp  AbilityState.cpp  (+23 more)
core/utils/: AssetID.hpp  AssetManager.cpp  AssetManager.hpp  AssetSerializer.hpp  EntityReflectionSignalRouter.hpp  Event.cpp  Event.hpp  KeyMapping.hpp  LightLoader.hpp  ParsingHelpers.cpp  ParsingHelpers.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleSystemGPU.cpp  ParticleSystemGPU.hpp  PriorityQueue.hpp  Serializer.cpp  Serializer.hpp  Slibmodel.cpp  Slibmodel.hpp  SpawnerLoader.cpp  SpawnerLoader.hpp  TextToRealFunction.hpp  TextureTerrainOverlay.cpp  TextureTerrainOverlay.hpp  Timer.hpp  ViewSerializer.hpp  common_types.hpp  enum_flag_operators.hpp  model_viewer.c  raylib-cereal.hpp  sage-cereal.hpp  slib.cpp  slib.hpp
editor/: CMakeLists.txt  EditGizmo.cpp  EditGizmo.hpp  Editor.cpp  Editor.hpp  EditorApplication.cpp  EditorApplication.hpp  EditorAssetCatalog.cpp  EditorAssetCatalog.hpp  EditorComponents.hpp  EditorEntityOperations.cpp  EditorEntityOperations.hpp  EditorFlatpack.cpp  EditorFlatpack.hpp  EditorGui.cpp  EditorGui.hpp  EditorHierarchyModel.cpp  EditorHierarchyModel.hpp  EditorHierarchyTree.cpp  EditorHierarchyTree.hpp  EditorInspector.cpp  EditorInspector.hpp  EditorMapLoader.cpp  EditorMapLoader.hpp  EditorModeStateMachine.cpp  EditorModeStateMachine.hpp  EditorModelDefaultsController.cpp  EditorModelDefaultsController.hpp  EditorPickingService.cpp  EditorPickingService.hpp  EditorPlacementController.cpp  EditorPlacementController.hpp  EditorScene.cpp  EditorScene.hpp  EditorSelection.cpp  EditorSelection.hpp  EditorSerializer.cpp  EditorSerializer.hpp  EditorSettings.hpp  EditorTransformEditor.cpp  (+11 more)
editor/windows/: FloatingWindow.cpp  FloatingWindow.hpp  Window.cpp  Window.hpp  gui_window_file_dialog.h
engine/: AudioManager.hpp  BaseSystems.cpp  BaseSystems.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CollisionLayers.hpp  Cursor.cpp  Cursor.hpp  EngineSystems.cpp  EngineSystems.hpp  Event.cpp  Event.hpp  FullscreenTextOverlayManager.cpp  FullscreenTextOverlayManager.hpp  GameUiEngine.cpp  GameUiEngine.hpp  KeyMapping.hpp  Light.hpp  LightManager.cpp  LightManager.hpp  MousePicker.cpp  MousePicker.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ResourceManager.cpp  ResourceManager.hpp  Serializer.cpp  Serializer.hpp  Settings.hpp  Slibmodel.cpp  Slibmodel.hpp  TextureTerrainOverlay.cpp  TextureTerrainOverlay.hpp  Timer.hpp  UserInput.cpp  ViewSerializer.hpp  implementations.cpp  slib.cpp  slib.hpp
engine/components/: Animation.cpp  Animation.hpp  BaseStateComponent.hpp  Collideable.cpp  Collideable.hpp  Component.hpp  ComponentField.hpp  DoorBehaviorComponent.cpp  DoorBehaviorComponent.hpp  MoveableActor.hpp  NavigationGridSquare.hpp  OverheadDialogComponent.cpp  OverheadDialogComponent.hpp  Renderable.cpp  Renderable.hpp  Spawner.hpp  sgTransform.cpp  sgTransform.hpp
engine/systems/: ActorMovementSystem.cpp  ActorMovementSystem.hpp  AnimationSystem.cpp  CleanupSystem.cpp  CleanupSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DoorSystem.cpp  DoorSystem.hpp  NavigationGridSystem.cpp  NavigationGridSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpatialAudioSystem.cpp  SpatialAudioSystem.hpp  TimerSystem.cpp  TimerSystem.hpp  TransformSystem.cpp  TransformSystem.hpp  UberShaderSystem.cpp  UberShaderSystem.hpp
engine/ui/: GameUIEngine.cpp  GameUIEngine.hpp  Scrollbar.cpp  Scrollbar.hpp  UIBase.cpp  UIBase.hpp  UIElements.cpp  UIElements.hpp  UILayout.cpp  UILayout.hpp  UIState.cpp  UIState.hpp  UIWindow.cpp  UIWindow.hpp
game/: CMakeLists.txt  main.cpp
game/src/: AbilityFactory.cpp  AbilityFactory.hpp  Application.cpp  Application.hpp  CursorClickIndicator.cpp  CursorClickIndicator.hpp  DialogFactory.cpp  DialogFactory.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameUI.cpp  GameUI.hpp  GameUiFactory.cpp  GameUiFactory.hpp  ItemFactory.cpp  ItemFactory.hpp  LootTable.cpp  LootTable.hpp  NpcManager.cpp  NpcManager.hpp  QuestManager.cpp  QuestManager.hpp  Systems.cpp  Systems.hpp  TextToRealFunction.hpp  system_includes.hpp
game/utils/: MapLoader.cpp  ParsingHelpers.cpp  ParsingHelpers.hpp  Serializer.cpp  Serializer.hpp  common_types.hpp  enum_flag_operators.hpp  sage-cereal.hpp
respacker/: CMakeLists.txt  ResourcePacker.cpp  ResourcePacker.hpp  blender-glb-export.py  blender-obj-export-new.py  blender-obj-export.py  blender-remove-dupes.py  dedupe-objs.py  main.cpp
(+584 files in other folders)
